@@ -6,6 +6,11 @@
     described in git-config(1) and can write git config files.
     (Jelmer Vernooij, #531092, #768687)
 
+ BUG FIXES
+
+  * Allow ``determine_wants`` methods to include the zero sha in their
+    return value. (Jelmer Vernooij)
+
 0.8.2	2011-12-18
 
  BUG FIXES
